# ProvenanceAI

./: .env.dfx  .env.example  .gitignore  .gitmodules  Cargo.toml  Makefile  Makefile.toml  README.md  dfx.json  story_config.json
constellation-metagraph/: README.md
constellation-metagraph/vps-setup/: 04_create_metagraph.sh  05_build_metagraph.sh
deployments/: local_deployment_20251021_053424.txt  local_deployment_20251021_054406.txt  local_deployment_20251021_064210.txt
icp-canister/: README.md
scripts/: backup_canister_state.sh  build_all.sh  deploy_all.sh  deploy_mainnet.sh  deploy_playground.sh  deploy_with_config.sh  register_ai_agent.ts  restore_canister_state.sh
src/brain_canister/: Cargo.toml  brain_canister.did
src/brain_canister/src/: ai_util.rs  config.rs  constellation_util.rs  evm_util.rs  http_util.rs  lib.rs  nft_deployment.rs  story_util.rs
story-contracts/: README.md
tests/: README.md  run-all-tests.sh
tests/constellation/: ProofOfGenerationTest.scala
